FIX: Fix the bug in Dark mode for Roadmap section (#104)
* Fixed Issue #102


* Fixed color in light mode in roadmap section

--- a/website/src/pages/ProjectCard/card.css
+++ b/website/src/pages/ProjectCard/card.css
@@ -62,7 +62,7 @@
     position: fixed;
     width: 100%;
     height: 500px;
-    background: white;
+    background: #18191A;
     margin: auto;
     top: 0;
     bottom: 0;
@@ -70,6 +70,7 @@
     right: 0;
     padding: 50px;
     overflow: auto;
+    color:white;
 }
 .modal_links{
     display: flex;
